test/fail/syntax_error/numeric_literal_exceeds_u64_max.amla
func main() int {
     x : i64 = 18446744073709551620;
}